tests/files/parser_tests/should_fail/046.cmdr
//Should fail due to incorrect alias command
alias = echo Hello;